# iFinder

./: .gitignore  README.md
ifinder-sdk/: README.md  pyproject.toml
ifinder-sdk/examples/: basic_usage.py  full_pipeline.py  parallel_pipeline.py
ifinder-sdk/src/ifinder_sdk/: __init__.py  claude_client.py  client.py
ifinder-sdk/src/ifinder_sdk/agents/: __init__.py  definitions.py
ifinder-sdk/src/ifinder_sdk/assets/poc/: pfcp_runtime.go
ifinder-sdk/src/ifinder_sdk/config/: __init__.py  models.py
ifinder-sdk/src/ifinder_sdk/hooks/: __init__.py  config.py  security.py
ifinder-sdk/src/ifinder_sdk/tools/: __init__.py  discovery.py  discovery_claude_runner.py  discovery_runner.py  exploitation.py  server.py  vetting.py
ifinder-sdk/tests/: __init__.py  conftest.py  test_agents.py  test_config.py  test_hooks.py  test_tools.py
pattern/: PA1.json  PA2.json  PB1.json  PB2.json  PB3.json  PC1.json
protocol/pfcp/: README.md  coverage_map.json
protocol/pfcp/procedure/: association_release.json  association_setup.json  association_update.json  heartbeat.json  node_report.json  pfd_management.json  session_deletion.json  session_establishment.json  session_modification.json  session_report.json
protocol/pfcp/raw/IE/: APNDNN.json  ATSSSControlParameters.json  ATSSSLLControlInformation.json  ATSSSLLInformation.json  ATSSSLLParameters.json  AccessAvailabilityControlInformation.json  AccessAvailabilityInformation.json  AccessAvailabilityReport.json  ActivatePredefinedRules.json  ActivationTime.json  AggregatedURRID.json  (+271 more)
scope/: scope_free5gc.json  scope_open5gs.json
(+23 files in other folders)
