[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ifinder-sdk"
version = "0.1.0"
description = "SDK skeleton for iFinder iTrue vulnerability discovery pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "claude-agent-sdk>=0.1.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ifinder_sdk"]
